--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         content="Rachel Quan is currently in my second year majoring in Computer Science and minoring in Technology Management at the University of California, Davis.">
 
     <!-- UIkit CSS -->
-    <link rel="stylesheet" href="./assets/css/uikit.min.css" />
+    <link rel="stylesheet" href="../assets/css/uikit.min.css" />
 
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="./assets/css/animate.min.css">
+    <link rel="stylesheet" href="../assets/css/animate.min.css">
 
     <!-- Emoji CSS -->
     <link rel='stylesheet' href='https://unpkg.com/emoji.css/dist/emoji.min.css'>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/index.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/index.css">
 
     <!-- UIkit JS -->
-    <script src="./assets/js/uikit.min.js"></script>
-    <script src="./assets/js/uikit-icons.min.js"></script>
+    <script src="../assets/js/uikit.min.js"></script>
+    <script src="../assets/js/uikit-icons.min.js"></script>
 
     <title>Rachel Quan</title>
 
@@ -42,10 +42,10 @@
             <nav class="uk-navbar-container" uk-navbar style="position: relative; z-index: 980;">
                 <div class="uk-navbar-right">
                     <ul class="uk-tab uk-visible@s">
-                        <li id="homePage" class="uk-active"><a href="./index.html">Home</a></li>
-                        <li id="codePage"><a href="./code/code.html">Code</a></li>
-                        <li id="designPage"><a href="./design/design.html">Design</a></li>
-                        <li id="aboutPage"><a href="./about/about.html">About</a></li>
+                        <li id="homePage"><a href="/">Home</a></li>
+                        <li id="codePage" class="uk-active"><a href="../code.html">Code</a></li>
+                        <li id="designPage"><a href="../design.html">Design</a></li>
+                        <li id="aboutPage"><a href="../about.html">About</a></li>
                     </ul>
                     <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon
                         uk-toggle="target: #sidenav"></a>
@@ -59,10 +59,10 @@
     <div id="sidenav" uk-offcanvas="flip: true; mode: reveal" class="uk-offcanvas">
         <div class="uk-offcanvas-bar">
             <ul class="uk-nav">
-                <li class="uk-active uk-text-large"><a href="./index.html">Home</a></li>
-                <li><a class="uk-text-large" href="./code/code.html">Code</a></li>
-                <li><a class="uk-text-large" href="./design/design.html">Design</a></li>
-                <li><a class="uk-text-large" href="./about/about.html">About</a></li>
+                <li class="uk-active uk-text-large"><a href="/">Home</a></li>
+                <li><a class="uk-text-large" href="../code.html">Code</a></li>
+                <li><a class="uk-text-large" href="../design.html">Design</a></li>
+                <li><a class="uk-text-large" href="../about.html">About</a></li>
             </ul>
         </div>
     </div>
