--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
                 <div class="uk-navbar-right">
                     <ul class="uk-tab uk-visible@s">
                         <li id="homePage"><a href="/">Home</a></li>
-                        <li id="codePage" ><a href="../code/code.html">Code</a></li>
-                        <li id="designPage"><a href="../design/design.html">Design</a></li>
-                        <li id="aboutPage" class="uk-active"><a href="../about/about.html">About</a></li>
+                        <li id="codePage" class="uk-active"><a href="../code.html">Code</a></li>
+                        <li id="designPage"><a href="../design.html">Design</a></li>
+                        <li id="aboutPage"><a href="../about.html">About</a></li>
                     </ul>
                     <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon
                         uk-toggle="target: #sidenav"></a>
@@ -60,9 +60,9 @@
         <div class="uk-offcanvas-bar">
             <ul class="uk-nav">
                 <li class="uk-active uk-text-large"><a href="/">Home</a></li>
-                <li><a class="uk-text-large" href="../code/code.html">Code</a></li>
-                <li><a class="uk-text-large" href="../design/design.html">Design</a></li>
-                <li><a class="uk-text-large" href="../about/about.html">About</a></li>
+                <li><a class="uk-text-large" href="../code.html">Code</a></li>
+                <li><a class="uk-text-large" href="../design.html">Design</a></li>
+                <li><a class="uk-text-large" href="../about.html">About</a></li>
             </ul>
         </div>
     </div>
@@ -72,7 +72,7 @@
     <!-- Description -->
     <div class="container">
         <div id="content">
-            <!--End of header-->
+<!--End of header-->
 
             <h2 id="main-hi" class="animated fadeIn">Hello friends!
                 <span class="ec ec-wave"></span>
