--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
                 <div class="uk-navbar-right">
                     <ul class="uk-tab uk-visible@s">
                         <li id="homePage"><a href="/">Home</a></li>
-                        <li id="codePage" class="uk-active"><a href="../code.html">Code</a></li>
+                        <li id="codePage"><a href="../code.html">Code</a></li>
                         <li id="designPage"><a href="../design.html">Design</a></li>
-                        <li id="aboutPage"><a href="../about.html">About</a></li>
+                        <li id="aboutPage" class="uk-active"><a href="../about.html">About</a></li>
                     </ul>
                     <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon
                         uk-toggle="target: #sidenav"></a>
