--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <nav class="uk-navbar-container" uk-navbar style="position: relative; z-index: 980;">
                 <div class="uk-navbar-right">
                     <ul class="uk-tab uk-visible@s">
-                        <li id="homePage"><a href="/">Home</a></li>
-                        <li id="codePage" class="uk-active"><a href="../code.html">Code</a></li>
+                        <li id="homePage" class="uk-active"><a href="/">Home</a></li>
+                        <li id="codePage"><a href="../code.html">Code</a></li>
                         <li id="designPage"><a href="../design.html">Design</a></li>
                         <li id="aboutPage"><a href="../about.html">About</a></li>
                     </ul>
