got rid of .html extensions

--- a/design.html
+++ b/design.html
@@ -43,9 +43,9 @@
                 <div class="uk-navbar-right">
                     <ul class="uk-tab uk-visible@s">
                         <li id="homePage"><a href="/">Home</a></li>
-                        <li id="codePage"><a href="../code.html">Code</a></li>
-                        <li id="designPage" class="uk-active"><a href="../design.html">Design</a></li>
-                        <li id="aboutPage"><a href="../about.html">About</a></li>
+                        <li id="codePage"><a href="../code">Code</a></li>
+                        <li id="designPage" class="uk-active"><a href="../design">Design</a></li>
+                        <li id="aboutPage"><a href="../about">About</a></li>
                     </ul>
                     <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon
                         uk-toggle="target: #sidenav"></a>
@@ -60,9 +60,9 @@
         <div class="uk-offcanvas-bar">
             <ul class="uk-nav">
                 <li class="uk-active uk-text-large"><a href="/">Home</a></li>
-                <li><a class="uk-text-large" href="../code.html">Code</a></li>
-                <li><a class="uk-text-large" href="../design.html">Design</a></li>
-                <li><a class="uk-text-large" href="../about.html">About</a></li>
+                <li><a class="uk-text-large" href="../code">Code</a></li>
+                <li><a class="uk-text-large" href="../design">Design</a></li>
+                <li><a class="uk-text-large" href="../about">About</a></li>
             </ul>
         </div>
     </div>
@@ -88,12 +88,12 @@
             <div class="uk-card uk-card-default animated fadeIn">
                 <div class="uk-card-body">
                     <h3 class="uk-card-title card-title">
-                        <a href="../design/citrus.html">Citrus Hack</a>
+                        <a href="../design/citrus">Citrus Hack</a>
                     </h3>
                 </div>
                 <div class="uk-card-media-bottom">
                     <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-                        <a href="../design/citrus.html">
+                        <a href="../design/citrus">
                             <img class="uk-transition-scale-up uk-transition-opaque" src="../design/images/covers/citrus.png" alt="">
                         </a>
                     </div>
@@ -106,14 +106,14 @@
             <div class="uk-card uk-card-default animated fadeIn">
                 <div class="uk-card-media-top">
                     <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-                        <a href="../design/rose.html">
+                        <a href="../design/rose">
                             <img class="uk-transition-scale-up uk-transition-opaque" src="../design/images/covers/rose.png" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title card-title">
-                        <a href="../design/rose.html">Rose Hack</a>
+                        <a href="../design/rose">Rose Hack</a>
                     </h3>
                 </div>
             </div>
@@ -124,14 +124,14 @@
             <div class="uk-card uk-card-default animated fadeIn">
                 <div class="uk-card-media-top">
                     <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
-                        <a href="../design/cutie.html">
+                        <a href="../design/cutie">
                             <img class="uk-transition-scale-up uk-transition-opaque" src="../design/images/covers/cutie.png" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title card-title">
-                        <a href="../design/cutie.html">Cutie Hack</a>
+                        <a href="../design/cutie">Cutie Hack</a>
                     </h3>
                 </div>
             </div>
