switching to npm installed packages rather than cdn? yolo

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         content="Rachel Quan is currently in my second year majoring in Computer Science and minoring in Technology Management at the University of California, Davis.">
 
     <!-- UIkit CSS -->
-    <link rel="stylesheet" href="../assets/css/uikit.min.css" />
+    <link rel="stylesheet" href="/css/uikit.min.css" />
 
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="../assets/css/animate.min.css">
+    <link rel="stylesheet" href="/animate.min.css">
 
     <!-- Emoji CSS -->
     <link rel='stylesheet' href='https://unpkg.com/emoji.css/dist/emoji.min.css'>
 
     <link rel="stylesheet" type="text/css" media="screen" href="../assets/css/index.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/all.min.css">
 
     <!-- UIkit JS -->
-    <script src="../assets/js/uikit.min.js"></script>
-    <script src="../assets/js/uikit-icons.min.js"></script>
+    <script src="/js/uikit.min.js"></script>
 
     <title>Rachel Quan</title>
 
@@ -98,17 +98,21 @@
                 </a>
             </p>
             
-            <p class="description animated fadeIn"> My <strong>resume</strong> is available upon request.
+            <p class="description animated fadeIn"> Please check out my <a href="./assets/Quan_Rachel.pdf" target="_blank">resume</a> to see what I've done!
             </p>
 
 <!-- Footer -->
         <!-- Socials -->
     <div id="socials" class="animated fadeIn">
-        <a href="http://github.com/rachelquan" target="_blank" class="uk-icon-button uk-margin-small-right"
-            uk-icon="github"></a>
-        <a href="http://linkedin.com/in/rachelquan" target="_blank" class="uk-icon-button  uk-margin-small-right"
-            uk-icon="linkedin"></a>
-        <a href="mailto:rquan@ucdavis.edu" target="_blank" class="uk-icon-button" uk-icon="mail"></a>
+        <a href="http://github.com/rachelquan" target="_blank" class="uk-icon-button uk-margin-small-right"> 
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="http://linkedin.com/in/rachelquan" target="_blank" class="uk-icon-button  uk-margin-small-right">
+            <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="mailto:rquan@ucdavis.edu" target="_blank" class="uk-icon-button">
+            <i class="far fa-envelope"></i>
+        </a>
     </div>
 
 </div>
